# oven-mllm-eval

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: audit_judge_false_positives.py  build_aligned_questions.py  build_taxonomy_index.py  catalog_runs.py  dedup_samples.py  explore_judgments.py  generate_oven_desc_chains.py  judge_lib.py  latest_run.sh  plot_ci_distribution.py  plot_hierarchical_metrics.py  plot_idk_rate.py  plot_modal_gap.py  plot_pass_at_k.py  plot_per_rollout_accuracy.py  prepare_oven.py  repair_inference_shards.py  run_inference.py  run_judge.py  run_recursive_self_agg.py  schedule_rsa.sh  schedule_sbatch.sh  schedule_scoring.sh  score_predictions.py  sync.sh  validate_mapper.py  visualize_taxonomy.py
splits/: split_oven_0_1e-05_1e-05_0.99998.json
src/oven_mllm_eval/: __init__.py  embedding_matcher.py  io.py  judge.py  judge_audit.py  matching.py  measures.py  pass_at_k.py  paths.py  prompts.py  scores.py  scoring.py  taxonomy.py
src/oven_mllm_eval/data/: __init__.py  load_data.py
